# tm_jacobian

./: CMakeLists.txt  README.md  jacobian_gen.cpp  main.cpp
tm_kinematics/include/tm_kinematics/: tm_jacob.h  tm_kin.h
tm_kinematics/src/: tm_jacob.cpp
